@@ -1,0 +1,28 @@
+# TITLE      Geometry parameters of Epix10ka, raw data:  shape:(352, 384)
+# DATE_TIME  2018-11-14 13:15:00 PDT
+# METROLOGY  N/A use manual settings in this file
+# AUTHOR     dubrovin
+# EXPERIMENT exp=mecx32917:run=0076
+# DETECTOR   MecTargetChamber.0-Epix10ka.1
+# CALIB_TYPE geometry
+# COMMENT:01 Table contains the list of geometry parameters for Epix10ka alignment relative to IP
+# COMMENT:02 This file was created manually. Detector position and orientation can be changed if needed
+# COMMENT:03 All translation and rotation pars of the object are defined w.r.t. parent object Cartesian frame
+# PARAM:01 PARENT     - name and version of the parent object
+# PARAM:02 PARENT_IND - index of the parent object
+# PARAM:03 OBJECT     - name and version of the object
+# PARAM:04 OBJECT_IND - index of the new object
+# PARAM:05 X0         - x-coordinate [um] of the object origin in the parent frame
+# PARAM:06 Y0         - y-coordinate [um] of the object origin in the parent frame
+# PARAM:07 Z0         - z-coordinate [um] of the object origin in the parent frame
+# PARAM:08 ROT_Z      - object design rotation angle [deg] around Z axis of the parent frame
+# PARAM:09 ROT_Y      - object design rotation angle [deg] around Y axis of the parent frame
+# PARAM:10 ROT_X      - object design rotation angle [deg] around X axis of the parent frame
+# PARAM:11 TILT_Z     - object tilt angle [deg] around Z axis of the parent frame
+# PARAM:12 TILT_Y     - object tilt angle [deg] around Y axis of the parent frame
+# PARAM:13 TILT_X     - object tilt angle [deg] around X axis of the parent frame
+
+# HDR PARENT IND        OBJECT IND     X0[um]   Y0[um]   Z0[um]   ROT-Z ROT-Y ROT-X     TILT-Z   TILT-Y   TILT-X
+
+SENSOR         0    EPIX10KA:V1   0         0        0        0       0     0     0    0.00000  0.00000  0.00000
+IP             0    SENSOR        0         0        0  1000000      90     0     0    0.00000  0.00000  0.00000
