@@ -7,9 +7,16 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V01-00-92
+2020-09-02 Mikhail S. Dubrovin
+- add default constants for epix10ka and epix10kaquad
+	new file:   data/geometry-def-epix10ka.data
+	new file:   data/geometry-def-epix10kaquad.data
+	modified:   src/PyDetectorAccess.py
 
-Tag: V01-00-91 - add parameter cframe to coords_xyz, add a few default geometry files, update examples
+Tag: V01-00-91
 2020-08-25 Mikhail S. Dubrovin
+- add parameter cframe to coords_xyz, add a few default geometry files, update examples
 	new file:   data/geometry-def-epix10ka2m.data
 	new file:   data/geometry-def-jungfrau05m.data
 	new file:   data/geometry-def-jungfrau1m.data
